add: 数値プリミティブ

--- a/01_Julia_begin.ipynb
+++ b/01_Julia_begin.ipynb
@@ -155,11 +155,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 数値\n",
+    "\n",
+    "### 数値プリミティブ型\n",
+    "- **数値**\n",
+    "    - 整数と浮動小数点があり、演算処理の基本的要素となっている\n",
+    "    - コード内では、整数（1, 2, ...）は即値、浮動小数点（1.0, 1.1, ...）は数値リテラルと呼ばれる\n",
+    "        - 即値と数値リテラルを合わせて数値プリミティブと呼ぶ\n",
+    " \n",
+    "#### 整数型\n",
+    "型      | 符号の有無 | バイト数 | 最小値   | 最大値\n",
+    ":--     |    :--     |   :--    |   :--    |   :--\n",
+    "Int8    |     o      |     8    |   -2^7   |   2^7 - 1\n",
+    "UInt8   |     x      |     8    |      0   |   2^8 - 1\n",
+    "Int16   |     o      |    16    |  -2^15   |  2^15 - 1\n",
+    "UInt16  |     x      |    16    |      0   |  2^16 - 1\n",
+    "Int32   |     o      |    32    |  -2^31   |  2^31 - 1\n",
+    "UInt32  |     x      |    32    |      0   |  2^32 - 1\n",
+    "Int64   |     o      |    64    |  -2^63   |  2^63 - 1\n",
+    "UInt64  |     x      |    64    |      0   |  2^64 - 1\n",
+    "Int128  |     o      |   128    | -2^127   | 2^127 - 1\n",
+    "UInt128 |\t  x      |   128    |      0   | 2^128 - 1\n",
+    "Bool    |   N/A      |     8    | false(0) |  true(1)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
