--- a/01_Julia_calculation.ipynb
+++ b/01_Julia_calculation.ipynb
@@ -538,6 +538,393 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 演算子\n",
+    "\n",
+    "### 算術演算子\n",
+    "以下の算術演算子は全ての数値プリミティブ型でサポートされている\n",
+    "\n",
+    "式      |    名称    |   概要\n",
+    ":--     |    :--     |   :--\n",
+    "`+x`    | 単一項加法 | 恒等作用素\n",
+    "`-x`    | 単一項減法 | 値を逆数と関連付ける\n",
+    "`x + y` | 二項加法   | 加法を実施\n",
+    "`x - y` | 二項減法   | 減法を実施\n",
+    "`x * y` | 乗法       | 乗法を実施\n",
+    "`x / y` | 除法       | 除法を実施 (`÷`でもOK)\n",
+    "`x \\ y` | 逆数除法   | `y / x` と同等\n",
+    "`x ^ y` | 累乗       | xをy分だけ掛ける\n",
+    "`x % y` | 余り       | `rem(x,y)` と同等\n",
+    "\n",
+    "`Bool(@ref)`型の否定形についても同様\n",
+    "\n",
+    "式   | 名称   | 概要\n",
+    ":--  | :--    | :--\n",
+    "`!x` | 否定形 | `true`を`false`に, `false`を`true`に変換する\n",
+    "\n",
+    "\n",
+    "### ビット演算子\n",
+    "以下のビット演算子は全ての数値プリミティブ型でサポートされている\n",
+    "\n",
+    "式        |    名称\n",
+    ":--       |    :--\n",
+    "`~x`      | ビット単位の否定\n",
+    "`x & y`   | ビット単位の論理積\n",
+    "`x｜y`    | ビット単位の論理和\n",
+    "`x ⊻ y`   | ビット単位の排他的論理和（`xor`関数でもOK）\n",
+    "`x >>> y` | 論理右桁送り\n",
+    "`x >> y`  | 算術右桁送り\n",
+    "`x << y`  | 論理/算術左桁送り\n",
+    "\n",
+    "### 更新演算子\n",
+    "更新演算子: 変数の値を更新する演算子\n",
+    "\n",
+    "`<変数名> <演算子>'=' <値>` は `<変数名> '=' <変数名> <演算子> <値>` と等価\n",
+    "\n",
+    "更新機能を持つ演算子は以下の通り\n",
+    "\n",
+    "```\n",
+    "+=  -=  *=  ÷=  /=  \\=  %=  ^=  &=  |=  ⊻=  >>>=  >>=  <<=\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (1 + 2) * 3 * 4 / 6 \n",
+    "println((1 + 2) * 3 * 2^2 ÷ 6)\n",
+    "\n",
+    "# 余り\n",
+    "## 9 % 2 = 1\n",
+    "println(rem(9, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 1]\n",
+      "[0, 1, 1, 1]\n",
+      "[0, 1, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ビット演算\n",
+    "## AND: 1 & 1 のみ 1, それ以外は 0\n",
+    "println([0 & 0, 0 & 1, 1 & 0, 1 & 1])\n",
+    "\n",
+    "## OR: 0 | 0 のみ 0, それ以外は 1\n",
+    "println([0 | 0, 0 | 1, 1 | 0, 1 | 1])\n",
+    "\n",
+    "## XOR: 0と1の組み合わせのときのみ 1, 同一の組み合わせなら 0\n",
+    "println([0 ⊻ 0, xor(0, 1), 1 ⊻ 0, xor(1, 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "UInt8\n",
+      "2\n",
+      "Int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 更新機能を使うと変数の型が変わることがある\n",
+    "\n",
+    "# x = 1: UInt8\n",
+    "x = 0x01\n",
+    "println(x)\n",
+    "println(typeof(x))\n",
+    "\n",
+    "# x = x * 2 = 2: Int64\n",
+    "x *= 2\n",
+    "println(x)\n",
+    "println(typeof(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Int64,1}:\n",
+       "  1\n",
+       "  8\n",
+       " 27"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ドット演算子\n",
+    "## 配列など、数値の固まりに対してドット演算子と算術演算子を適用すると\n",
+    "## 固まりの各数値に対して算術演算を行うことができる\n",
+    "\n",
+    "# [1^3, 2^3, 3^3] = [1, 8, 27]\n",
+    "[1, 2, 3] .^ 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 比較演算子\n",
+    "以下の比較演算子は全ての数値プリミティブ型でサポートされている\n",
+    "\n",
+    "演算子     |  名称\n",
+    ":--        |  :--\n",
+    "`==`       | 等しい\n",
+    "`!=`, `≠` | 等しくない\n",
+    "`<`        | より小さい\n",
+    "`<=`, `≤` | より大きい\n",
+    "`>`        | 以下\n",
+    "`>=`, `≥` | 以上\n",
+    "\n",
+    "ハッシュ値の比較など、特別な値を比較するには比較演算子を使うことができないため、以下のような関数を使う\n",
+    "\n",
+    "関数            |   検証内容\n",
+    ":--             |   :--\n",
+    "`isequal(x, y)` | x および y は一致するか\n",
+    "`isfinite(x)`   | x は有限数であるか\n",
+    "`isinf(x)`      | x は無限であるか\n",
+    "`isnan(x)`      | x は数字以外であるか"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n",
+      "true\n",
+      "true\n",
+      "true\n",
+      "false\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(1 == 2) # false\n",
+    "println(1 != 2) # true\n",
+    "println(1 == 1.0) # true\n",
+    "println(-1 <= -1) # true\n",
+    "println(-1 <= -2) # false\n",
+    "println(3 < 0.5) # false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(isequal(NaN, NaN)) # true\n",
+    "println([1 NaN] == [1 NaN]) # false: 配列の比較を演算子で行うことはできない\n",
+    "println(isequal([1 NaN], [1 NaN])) # true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 符号付き0を区別する際も isequal を使う\n",
+    "println(-0.0 == 0.0) # true\n",
+    "println(isequal(-0.0, 0.0)) # false"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 連続した比較を行うこともできる\n",
+    "1 < 2 <= 3 > 2.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 演算子の優先順位\n",
+    "演算子の優先順位は高いものから順に以下のようになっている\n",
+    "\n",
+    "式           |                         演算子                         | 優先順位\n",
+    ":--          |                         :--                            | :--\n",
+    "構文         | `::` を伴う `.`                                        | 高い\n",
+    "累乗         | `^`                                                    |\n",
+    "分数         | `//`                                                   |\n",
+    "乗法         | `* / % & \\`                                            |\n",
+    "ビットシフト | `<< >> >>>`                                            |\n",
+    "加法         | `+ - ｜ ⊻`                                            |\n",
+    "構文         | `｜>`を伴う `: ..`                                     |\n",
+    "比較         | `> < >= <= == === != !== <:`                           |\n",
+    "制御フロー\t| `｜` および `?` を伴う `&&`                            |\n",
+    "割り当て     |`= += -= *= /= //= \\= ^= ÷= %= ｜= &= ⊻= <<= >>= >>>=`| 低い"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 数値処理関数\n",
+    "\n",
+    "#### 数値変換\n",
+    "- `T(x)`, `convert(T, x)`:\n",
+    "    - `x`を`T`型の値に変換する\n",
+    "    - `T`が浮動小数点型の場合、変換の結果は最も近い表現可能な値になる\n",
+    "    - `T`が整数型の場合、`x`が`T`で表現できない際は`InexactError`が発生する\n",
+    "- `x % T`:\n",
+    "    - 整数`x`を法とする `2^n` (`n`は`T`のビット数)に一致する整数型`T`の値に変換する\n",
+    "\n",
+    "#### 端数処理関数\n",
+    "関数          |                 概要                 | 戻り値の型\n",
+    ":--           |                 :--                  | :--\n",
+    "`round(x)`    | x を最も近い整数になるよう丸めを行う | `typeof(x)`\n",
+    "`round(T, x)` | x を最も近い整数になるよう丸めを行う | `T`\n",
+    "`floor(x)`    | x を -Inf に向かって丸めを行う       | `typeof(x)`\n",
+    "`floor(T, x)` | x を -Inf に向かって丸めを行う       | `T`\n",
+    "`ceil(x)`     | x を +Inf に向かって丸めを行う       | `typeof(x)`\n",
+    "`ceil(T, x)`  | x を +Inf に向かって丸めを行う       | `T`\n",
+    "`trunc(x)`    | x を0に向かって丸めを行う            | `typeof(x)`\n",
+    "`trunc(T, x)` | x を0に向かって丸めを行う            | `T`\n",
+    "\n",
+    "#### 除算関数\n",
+    "関数        |   概要\n",
+    ":--         |   :--\n",
+    "`div(x,y)`  | 0に向かって丸めを行う除算\n",
+    "`fld(x,y)`  | 床関数のように -Inf に向かって丸めを行う除算\n",
+    "`cld(x,y)`  | 天井関数のように +Inf に向かって丸めを行う除算\n",
+    "`rem(x,y)`  | 余り; `x == div(x,y)*y + rem(x,y)` を満たす; 記号は x と一致\n",
+    "`mod(x,y)`  | 剰余演算; `x == fld(x,y)*y + mod(x,y)` を満たす; 記号は y と一致\n",
+    "`mod1(x,y)` | オフセットが1の`mod()`\n",
+    "\n",
+    "#### 符号と絶対値関数\n",
+    "関数            | 概要\n",
+    ":--             | :--\n",
+    "`abs(x)`        | 絶対値 x の正の値\n",
+    "`abs2(x)`       | 絶対値 x の2乗\n",
+    "`sign(x)`       | x の符号を示し、 -1、 0、 または +1を返す\n",
+    "`signbit(x)`    | 符号ビットがオン（true）またはオフ（false）であるかを示す\n",
+    "`copysign(x,y)` | 絶対値 x と符号 y を持つ値\n",
+    "`flipsign(x,y)` | 絶対値 x と符号 x*y を持つ値\n",
+    "\n",
+    "#### 累乗、対数、根\n",
+    "関数             | 概要\n",
+    "`sqrt(x)`, `√x` | x の平方根\n",
+    "`cbrt(x)`, `∛x`  | x の立方根\n",
+    "`hypot(x,y)`     | 長さ x および y をその他の辺に持つ直角三角形の斜辺\n",
+    "`exp(x)`         | x における自然指数関数\n",
+    "`expm1(x)`       | 0に近い x の正確な `exp(x)-1` の結果\n",
+    "`ldexp(x,n)`     | n の整数値に対して効率的に計算された `x*2^n`\n",
+    "`log(x)`         | x の自然対数\n",
+    "`log(b,x)`       | b を底とした x の対数\n",
+    "`log2(x)`        | 2を底とした x の対数\n",
+    "`log10(x)`       | 10を底とした x の対数\n",
+    "`log1p(x)`       | 0に近い x の正確な `log(1+x)` の結果\n",
+    "`exponent(x)`    | x の2進指数\n",
+    "`significand(x)` | 浮動小数点数 x の2進仮数\n",
+    "\n",
+    "#### 三角関数と双曲線関数\n",
+    "以下はラジアン単位の引数をとる三角関数、双曲線関数\n",
+    "\n",
+    "```\n",
+    "sin    cos    tan    cot    sec    csc\n",
+    "sinh   cosh   tanh   coth   sech   csch\n",
+    "asin   acos   atan   acot   asec   acsc\n",
+    "asinh  acosh  atanh  acoth  asech  acsch\n",
+    "sinc   cosc   atan2\n",
+    "```\n",
+    "\n",
+    "ラジアンではなく角度で三角関数を計算するためには、 `d`を関数の末尾に付与する\n",
+    "\n",
+    "```\n",
+    "sind   cosd   tand   cotd   secd   cscd\n",
+    "asind  acosd  atand  acotd  asecd  acscd\n",
+    "```\n",
+    "\n",
+    "#### 特殊な関数\n",
+    "関数         |    概要\n",
+    ":--          |    :--\n",
+    "`gamma(x)`   | x における ガンマ関数\n",
+    "`lgamma(x)`  | 大きな値 x における `log(gamma(x))`\n",
+    "`lfact(x)`   | 大きな値 x における `log(factorial(x))`\n",
+    "`beta(x,y)`  | x, y における ベータ関数\n",
+    "`lbeta(x,y)` | 大きな値 x または y における正確な `log(beta(x,y))`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
