add: tuto: 関数の基本

--- a/01_Julia_calculation.ipynb
+++ b/01_Julia_calculation.ipynb
@@ -560,9 +560,11 @@
     "\n",
     "`Bool(@ref)`型の否定形についても同様\n",
     "\n",
-    "式   | 名称   | 概要\n",
-    ":--  | :--    | :--\n",
-    "`!x` | 否定形 | `true`を`false`に, `false`を`true`に変換する\n",
+    "式       | 名称   | 概要\n",
+    ":--      | :--    | :--\n",
+    "`!x`     | 否定形 | `true`を`false`に, `false`を`true`に変換する\n",
+    "`x && y` |  AND   | x と y が両方`true`の場合に`true`として評価される\n",
+    "`x｜｜y` |  OR    | x と y のいずれかが`true`の場合に`true`として評価される\n",
     "\n",
     "\n",
     "### ビット演算子\n",
